<resources>
    <string name="app_name">DealByte</string>
    <string name="account_name">Account Holder Name:</string>
    <string name="account_number">Account Number:</string>
    <string name="bank_code">Bank Code:</string>
    <string name="branch">Branch:</string>
    <string name="amount">Amount:</string>
    <string name="location">Location:</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="add">Add</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="current_location">Current Location</string>
    <string name="location_1">Location :&#160;</string>
    <string name="set_location">Set Location</string>


    <string name="MAPS_API_KEY" translatable="false">AIzaSyAk72UBxal8dHOT3cI7Nd2bvL5WS4rkINM</string>

    <!--  <string name="google_app_id" translatable="false">1:194308500261:android:1cf1848133d18ff4efc8cc</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyAk72UBxal8dHOT3cI7Nd2bvL5WS4rkINM</string>

    <string name="google_storage_bucket" translatable="false">gpzon-a1e7e.appspot.com</string>
    <string name="project_id" translatable="false">gpzon-a1e7e</string>-->


    <string-array name="sp_select_voucher">
        <item>Select Voucher</item>
        <item>Rs. 40 (Min Shopping Amount: Rs.1000)</item>
        <item>Rs. 72 (Min Shopping Amount: Rs.5000)</item>
        <item>Rs. 100 (Min Shopping Amount: Rs.5500)</item>
    </string-array>


    <string-array name="sp_select_city_are">
        <item>Select Area/City</item>
        <item>Banashankari - Bangalore</item>
        <item>Koramangala - Bangalore</item>
        <item>JP Nagar - Bangalore</item>
        <item>RT Nagar - Bangalore</item>
    </string-array>


    <string-array name="sp_select_catagory">
        <item>All Catagories</item>
        <item>Restaurants</item>
        <item>Groceries</item>
        <item>Salon</item>
        <item>Pubs</item>
    </string-array>

    <string name="request_permission_title">Request Permission</string>
    <string name="request_permission_message">Go to DealByte App settings and grant the necessary permissions to continue using the DealByte Application</string>
    <string name="close">CLose</string>
    <string name="internet_con_not_available">Internet connection is not available. Please connect to the Internet and try again.</string>

</resources>